--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* */
+.btn-blue{
+    @apply bg-blue-800 py-2 px-4 font-semibold text-white rounded-full;
+} 
 body{
     font-family: "Poppins", sans-serif;
+    font-weight:300;
 }
 h1{
     font-size: 2em 
-}
+} 
 h2{
     font-size:1.5em;
 }
@@ -24,7 +30,12 @@ h4{
 }
 
 /* Loading Spinner Custom CSSS */ 
-
+.service-card{
+    border-radius: 7px;
+background: #f5fff5;
+box-shadow:  5px 5px 10px #828782,
+             -5px -5px 10px #ffffff;
+}
 .loading{
     position:absolute;
     top:0;
